Fix bus icon spacing

--- a/apps/concierge_site/assets/css/_subscription.scss
+++ b/apps/concierge_site/assets/css/_subscription.scss
@@ -77,7 +77,6 @@
   background-color: $brand-bus;
 
   img {
-    bottom: .0625rem;
     height: 1rem;
     left: .0625rem;
     position: relative;
@@ -102,4 +101,4 @@
     bottom: .1875rem;
     position: relative;
   }
-} 
+}
